Reverts back to single line php include once to get home page to show.
Also updates href's on homepage to point to the markup file
locations within their folders.

--- a/views/home.html
+++ b/views/home.html
@@ -35,10 +35,10 @@
                 <span class="menu-bar"></span>
               </div>
               <ul class='nav-list'>
-                <li><a href="home.html" class="btn btn-primary btn-block">Home</a></li>
-                <li><a href="services.html" class="btn btn-primary btn-block">Services</a></li>
-                <li><a href="about.html" class="btn btn-primary btn-block">About</a></li>
-                <li><a href="projects.html" class="btn btn-primary btn-block">Projects</a></li>
+                <li><a href="views/home.html" class="btn btn-primary btn-block">Home</a></li>
+                <li><a href="views/services.html" class="btn btn-primary btn-block">Services</a></li>
+                <li><a href="views/about.html" class="btn btn-primary btn-block">About</a></li>
+                <li><a href="views/projects.html" class="btn btn-primary btn-block">Projects</a></li>
               </ul>
             </nav>
           </div>
