--- a/views/projects.html
+++ b/views/projects.html
@@ -33,10 +33,10 @@
                 <span class="menu-bar"></span>
               </div>
               <ul class='nav-list'>
-                <li><a href="home.html" class="btn btn-primary btn-block">Home</a></li>
-                <li><a href="services.html" class="btn btn-primary btn-block">Services</a></li>
-                <li><a href="about.html" class="btn btn-primary btn-block">About</a></li>
-                <li><a href="projects.html" class="btn btn-primary btn-block">Projects</a></li>
+                <li><a href="./home.html" class="btn btn-primary btn-block">Home</a></li>
+                <li><a href="./services.html" class="btn btn-primary btn-block">Services</a></li>
+                <li><a href="./about.html" class="btn btn-primary btn-block">About</a></li>
+                <li><a href="./projects.html" class="btn btn-primary btn-block">Projects</a></li>
               </ul>
             </nav>
           </div>
